a link open source

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </div>
       </div>
     </div>
+    <span><a href="https://github.com/169233/MyWeatherApp">Open source</a></span>
     <script src="app.js"></script>
   </body>
 </html>
