--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           6°C
         </div>
       </div>
-    </div>
-    <span><a href="https://github.com/169233/MyWeatherApp">Open source</a></span>
+      <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" >Open source</a></span>
+    </div> 
     <script src="app.js"></script>
   </body>
 </html>
