add aLink class, target blank

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           6°C
         </div>
       </div>
-      <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" >Open source</a></span>
+      <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source</a></span>
     </div> 
     <script src="app.js"></script>
   </body>
