--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
           6°C
         </div>
       </div>
-      <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source</a></span>
-    </div> 
+          </div>
+    <div class="conecting">
+    <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source</a></span> 
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
