rename open source

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           class="form-control shadow-sm"
           type="text"
           placeholder="Enter a city"
-          autofocus="on" />
+          autofocus="on"
+          autocomplete="off" />
           </div>
         <div class="col-3">
           <button id="location" type="button" class="btn btn-primary">
@@ -95,7 +96,7 @@
       </div>
           </div>
     <div class="conecting">
-    <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source</a></span> 
+    <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source by Jana Srahulkova</a></span> 
     </div>
     <script src="app.js"></script>
   </body>
