add function celsium vs fahrenheit

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <i id="icon" ></i>
           <br />
           <div id="temperature">
-            <span id="celsium" class="celsium">°C</span>
-            <span id="fahrenheit" class="fahrenheit">| F</span>
+            <span id="celsium"></span><a id="celsiumLink" href="#">°C</a>
+            <span id="fahrenheit"></span><span><a id="fahrenheitLink" href="#">| F</a></span>
           </div>
           <div id="description"></div>
         </div>
@@ -96,7 +96,7 @@
       </div>
           </div>
     <div class="conecting">
-    <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source by Jana Srahulkova</a></span> 
+    <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source </a></span><span>by Jana Srahulkova</span>
     </div>
     <script src="app.js"></script>
   </body>
