--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <i id="icon" ></i>
           <br />
           <div id="temperature">
-            <span id="celsium"></span><a id="celsiumLink" href="#">°C</a>
-            <span id="fahrenheit"></span><span><a id="fahrenheitLink" href="#">| F</a></span>
+            <span id="celsium" class="unit"></span><a id="celsiumLink" class="active" href="#"> °C</a>
+            <span id="fahrenheit"></span><span><a id="fahrenheitLink" href="#">| °F</a></span>
           </div>
           <div id="description"></div>
         </div>
