add div class and span

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </div>
         <div class="col">
           <ul>
-            <li id="date">20.11.2022</li>
-            <li id="time">16:00</li>
-            <li id="weekDay">Sunday</li>
+            <li id="date"></li>
+            <li id="time"></li>
+            <li id="weekDay"></li>
           </ul>
           <ul>
             <li>Country:<span id="country"></span></li>
@@ -71,7 +71,7 @@
         <div class="col-1">
           Mo
           <i class="fa-solid fa-cloud-showers-heavy"></i>
-          4°C
+          <div class="tempForecast">4<span> °C</span></div>
         </div>
         <div class="col-1">
           Tu
