--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </div>
       </div>
       <br />
+      <div class="weatherForecast" id="">
       <div class="row">
         <div class="col-1">
           Mo
@@ -94,6 +95,7 @@
           6°C
         </div>
       </div>
+    </div>
           </div>
     <div class="conecting">
     <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source </a></span><span>by Jana Srahulkova</span>
