building new function in proces

--- a/index.html
+++ b/index.html
@@ -67,16 +67,9 @@
         </div>
       </div>
       <br />
-    <div class="weatherForecast" id="">
-      <div class="row">
-        <div class="col-1">
-          Mo
-          <i class="fa-solid fa-cloud-showers-heavy"></i>
-          <div class="tempForecast">4<span> °C</span></div>
-        </div>
-      </div>
+     <div class="weatherForecast" id="nextForecast">
+     </div>
     </div>
-          </div>
     <div class="conecting">
     <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source </a></span><span>by Jana Srahulkova</span>
     </div>
