remove Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           <i id="icon" ></i>
           <br />
           <div id="temperature">
-            <span id="celsium" class="unit"></span><a id="celsiumLink" class="active" href="#"> °C</a>
-            <span id="fahrenheit"></span><span><a id="fahrenheitLink" href="#">| °F</a></span>
+            <span id="celsium" class="unit"></span><span> °C</span>
           </div>
           <div id="description"></div>
         </div>
@@ -61,7 +60,7 @@
           </ul>
           <ul>
             <li>Country:<span id="country"></span></li>
-            <li>Wind: <span id="wind"></span> km/h</li>
+            <li>Wind: <span id="wind"></span> m/s</li>
             <li>Humidity:<span id="humidity"></span>%</li>
           </ul>
         </div>
