--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
           id="searchCity"
           class="form-control shadow-sm"
           type="text"
-          placeholder="Enter a city"
+          placeholder="Enter a city..."
           autofocus="on"
           autocomplete="off" />
           </div>
         <div class="col-3">
           <button id="location" type="button" class="btn btn-primary">
-            Location
+           My location
           </button>
         </div>
       </form>
@@ -48,7 +48,7 @@
           <i id="icon" ></i>
           <br />
           <div id="temperature">
-            <span id="celsium" class="unit"></span><span> °C</span>
+          <span id="celsium" class="unit"></span><span> °C</span>
           </div>
           <div id="description"></div>
         </div>
@@ -67,7 +67,7 @@
       </div>
       <br />
      <div class="weatherForecast" id="nextForecast">
-           </div>
+      </div>
     </div>
     <div class="conecting">
     <span><a id="aLink" href="https://github.com/169233/MyWeatherApp" target="_blank"  class="aLink">Open source </a></span><span>by Jana Srahulkova</span>
