new class metric

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <i id="icon" ></i>
           <br />
           <div id="temperature">
-          <span id="celsium" class="unit"></span><span> °C</span>
+          <span id="celsium" class="unit"></span><span class="metric"> °C</span>
           </div>
           <div id="description"></div>
         </div>
