improve CSS input and background container

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input
           id="searchCity"
           class="form-control shadow-sm"
-          type="text"
+          type="search"
           placeholder="Enter a city..."
           autofocus="on"
           autocomplete="off" />
